<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

<!--  Header / Judul  -->
    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/notes"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"
        />

<!--  Search Bar-->
    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

<!--    gambar icon    -->
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/colorSearchIcon"
            />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        >

    </androidx.recyclerview.widget.RecyclerView>

<!--    yang kuubah  layoutQuickActions
        android:background="@color/colorQuickActionsBackground"
        android:padding="@dimen/_12sdp"
-->
    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="parent">

<!--        Icon Bar Bawah
            semua quick action ku hapus
            android:visibility="gone"
-->
        <ImageView
            android:id="@+id/imageAddNote"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_outline"
            app:tint="@color/colorIcons"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/imageAddWebLink"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            app:tint="@color/colorIcons"
            android:visibility="gone"
            />

    </LinearLayout>

<!--    Button Add Note-->
    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickActions"
        />
    
</androidx.constraintlayout.widget.ConstraintLayout>